primero por segundo

--- a/Post.html
+++ b/Post.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Mi primer post</title>
+        <title>Mi segundo post</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
