--- a/Post.html
+++ b/Post.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title>Mi segundo post</title>
+        <title>Mi segundo post, no sabemos html (:
+        </title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
