--- a/Post.html
+++ b/Post.html
@@ -8,6 +8,6 @@
         <hl>Aqui haremos el post </hl>
         <p> Este es el parrafo de inicio </p>
         <p> Este es el cambio que hicimos para ver la prueba</p>
-        <p> Este es el cambio que hicimos para ver la segunda prueba</p>
+        <p> Esta es la modificación que hicimos para ver la segunda prueba</p>
     </body>
 </html>
