--- a/Post.html
+++ b/Post.html
@@ -5,9 +5,11 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <hl>Aqui haremos el post </hl>
+        <hl>Aqui haremos la publicación </hl>
         <p> Este es el parrafo de inicio </p>
         <p> Este es el cambio que hicimos para ver la prueba</p>
         <p> Este es el cambio que hicimos para ver la segunda prueba</p>
+        <p> Esto es nuevo</p>
+
     </body>
 </html>
