--- a/Post.html
+++ b/Post.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Mi segundo post, no sabemos html (:
+        <title> Bienvenido a mi blog 
         </title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
