--- a/Post.html
+++ b/Post.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <hl>Aqui haremos la publicación </hl>
+        <hl>Este es mi primer blog </hl>
         <p> Este es el parrafo de inicio </p>
         <p> Este es el cambio que hicimos para ver la prueba</p>
         <p> Este es el cambio que hicimos para ver la segunda prueba</p>
